syntax = "proto3";

service LoginService {
      rpc checkForValidCredentials(Credentials) returns (LoginResponse){}
      rpc checkForValidToken(RequestToken) returns (GenericResponse){}
      rpc forgotPasswordAdmin(Email) returns(GenericResponse){}
}

message Credentials{
    string email = 1;
    string password = 2;
}
message LoginResponse {
    int32 status = 1;
    string message = 2;
    optional string id = 3;
    optional string token = 4;
}

message RequestToken{
    string token = 1;
}

message Email{
    string email = 1;
}


message GenericResponse {
    int32 status = 1;
    string message = 2;
}
